--- a/Meta-Llama-3-8B-Instruct-OnlineDPO-WIM-Zeta1.0/config.json
+++ b/Meta-Llama-3-8B-Instruct-OnlineDPO-WIM-Zeta1.0/config.json
@@ -6,11 +6,13 @@
   "attention_dropout": 0.0,
   "bos_token_id": 128000,
   "eos_token_id": 128009,
+  "head_dim": 128,
   "hidden_act": "silu",
   "hidden_size": 4096,
   "initializer_range": 0.02,
   "intermediate_size": 14336,
   "max_position_embeddings": 8192,
+  "mlp_bias": false,
   "model_type": "llama",
   "num_attention_heads": 32,
   "num_hidden_layers": 32,
@@ -20,8 +22,8 @@
   "rope_scaling": null,
   "rope_theta": 500000.0,
   "tie_word_embeddings": false,
-  "torch_dtype": "bfloat16",
-  "transformers_version": "4.40.0.dev0",
+  "torch_dtype": "float32",
+  "transformers_version": "4.52.4",
   "use_cache": true,
   "vocab_size": 128256
 }
